--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,3 @@
-body,html {
-	height: 100%;
-}
-
-body {
-	font-family: 'Roboto', sans-serif;
-}
-
 /* --------------------//----------------------
 ------ Institucional ------
 
@@ -43,3 +35,22 @@ RGB	rgb(38, 52, 115)
 HEX	#524595
 RGB	rgb(82, 69, 149)
 --------------------//---------------------- */
+
+body,html {
+	height: 100%;
+}
+
+body {
+	font-family: 'Roboto', sans-serif;
+	background: linear-gradient(to bottom right, #1BB7D0, #524595);
+}
+
+.footer {
+	background-color: black;
+}
+
+.footer-text {
+	color: white; 
+	font-size: 0.8rem; 
+	font-weight: 300;
+}
