container fluid on content

--- a/css/custom.css
+++ b/css/custom.css
@@ -54,6 +54,13 @@ body {
 	font-size: 1.2rem;
 }
 
+#user-input {
+	background-color: #f7f7f7;
+	border-radius: 5px;
+	margin: 20px;
+	padding: 5px;
+}
+
 .footer {
 	background-color: black;
 }
