--- a/css/custom.css
+++ b/css/custom.css
@@ -65,9 +65,14 @@ pre {
 }
 
 .header {
-	background: #1bb7d0;
-	color: #FFF;
+	background: URL(../img/bgg.png) center;
+	color: white !important;
 	padding: 75px 0;
+}
+
+h2 {
+	font-size: 50px !important;
+	font-weight: 700 !important;
 }
 
 .logo {
