--- a/css/custom.css
+++ b/css/custom.css
@@ -106,12 +106,14 @@ h2 {
 
 .footer {
 	color: #444;
-	font-size: 0.7rem;
-	padding: 15px 0;
+	margin-top: 50px;
+	padding: 25px 0;
 }
-
-.footer a {
-	color: #777;
+.footer .small {
+	font-size: 0.7rem;
+}
+.footer .copyright {
+	color: #aaa;
 }
 
 label .material-icons {
